<resources>
    <string name="app_name">ResQ</string>
    <string name="app_name_actionbar">Res-Q</string>
    <string name="contact_actionbar">Kontak</string>
    <string name="profile_actionbar">Profil</string>
    <string name="home_actionbar">Beranda</string>
    <string name="posko_actionbar">Posko</string>
    <string name="edit_posko_actionbar">Ubah Posko</string>
    <string name="signup_actionbar">Buat Akun</string>
    <string name="signin_actionbar">Masuk</string>
    <string name="otp_actionbar">Verifikasi OTP</string>
    <string name="temukansaya_actionbar">Temukan Saya</string>
    <string name="victim_name_actionbar">Masukkan Nama</string>
    <string name="water_level_actionbar">Ketinggian Muka Air</string>
    <string name="edit_profil_actionbar">Ubah Profil</string>
    <string name="open_maps_actionbar">Peta</string>
    <string name="add_posko_actionbar">Tambah Posko</string>
    <string name="buku_saku_actionbar">Buku Saku</string>
    <string name="history">Riwayat</string>
    <string name="button_onboard_victim">Bantu Saya</string>
    <string name="button_onboard_rescuer">Saya ingin Membantu</string>
    <string name="button_signin">Masuk</string>
    <string name="button_signup">Buat Akun</string>
    <string name="signup_name_rescuer">Nama Lengkap</string>
    <string name="signup_email_rescuer">Alamat Email</string>
    <string name="signup_phone_rescuer">No. HP</string>
    <string name="signup_instansi_rescuer">Instansi</string>
    <string name="signup_division_rescuer">Divisi</string>
    <string name="signup_employeeid_rescuer">No. ID Relawan</string>
    <string name="signup_password_rescuer">Kata Sandi</string>
    <string name="signup_repeat_rescuer">Ulangi Kata Sandi</string>
    <string name="button_tosignin"> Sudah Punya Akun? <u>Masuk</u></string>
    <string name="button_tosignup">Belum punya akun? <u>Buat akun</u></string>
    <string-array name="instansi_array">
        <item>Relawan 1</item>
        <item>Relawan 2</item>
        <item>Relawan 3</item>
        <item>Relawan 4</item>
    </string-array>
    <string-array name="division_array">
        <item>Rescuer</item>
        <item>Medis</item>
    </string-array>
    <string name="signup_name">Nama Lengkap</string>
    <string name="signup_phone">No. HP</string>
    <string name="button_name_continue">Lanjut</string>
    <string name="location_home">Lokasi Anda</string>
    <string name="tips_title_home">Buku Saku Tanggap Tangkas Tangguh Menghadapi Bencana</string>
    <string name="waterlevel_title">Ketinggian Muka Pintu Air Terdekat</string>
    <string name="bnpb_home">Badan Nasional Penanggulangan Bencana</string>
    <string name="height_title">Ketinggian:</string>
    <string name="last_updated_title">Pembaruan terakhir pada:</string>
    <string name="height_value">%d cm</string>
    <string name="greetings">Selamat datang, %s</string>
    <string name="see_more">Lihat lainnya</string>
    <string name="see_less">Lihat lebih sedikit</string>
    <string name="water_gate_distance">%s dari lokasi Anda</string>
    <string name="field_is_empty">Wajib diisi</string>
    <string name="phone_is_not_valid">Nomor telepon tidak valid</string>
    <string name="password_must_six_char">Kata sandi minimal terdiri dari 6 karakter</string>
    <string name="password_is_not_matched">Kata sandi tidak sesuai</string>
    <string name="email_is_not_valid">Masukan email tidak sesuai</string>
    <string name="toast_account_created">Akun berhasil dibuat</string>
    <string name="toast_logged_in">Berhasil masuk</string>
    <string name="toast_exit">Tekan sekali lagi untuk keluar</string>
    <string name="toast_profile_changed">"Profi berhasil diubah"</string>
    <string name="victim_already_handled">Korban sedang dalam proses bantuan</string>
    <string name="turn_on_location">Mohon aktifkan pengaturan lokasi</string>
    <string name="message_otp">Masukkan 6 digit angka yang masuk melalui pesan ke nomor:</string>
    <string name="otp_not_tell_anyone">Jangan berikan OTP kepada orang lain</string>
    <string name="button_otp_sendagain"><u>Kirim Ulang OTP</u></string>
    <string name="button_sendotp">Kirim</string>
    <string name="cdt_otp"><![CDATA[00 : %s]]></string>
    <string name="dialog_box_batalkan">Kembali dan batalkan kode OTP?</string>
    <string name="dialog_box_batalkan_penjelasan">Kode OTP yang telah dikirimkan melalui SMS akan hangus jika kamu kembali dan kamu harus meminta ulang</string>
    <string name="edit_profile_button">Ubah Profil</string>
    <string name="log_out_button">Keluar</string>
    <string name="history_title">Riwayat Pertolongan</string>
    <string name="helped_by">Bantuan dilakukan oleh:</string>
    <string name="temukansaya_uppercase">TEMUKAN SAYA</string>
    <string name="bagikan_lokasi">Bagikan lokasimu agar kami dapat segera ke lokasimu dan membantumu</string>
    <string name="rb_evakuasi">Evakuasi</string>
    <string name="rb_medis">Bantuan Medis</string>
    <string name="rb_makanan">Bantuan Makanan</string>
    <string name="tv_bantuan">Bantuan yang dibutuhkan</string>
    <string name="tv_jumlahorang">Jumalah orang</string>
    <string name="tv_lansia">Lansia</string>
    <string name="tv_dewasa">Dewasa</string>
    <string name="tv_anak">Anak-anak</string>
    <string name="tv_infotambahan">Informasi Tambahan</string>
    <string name="usia_lansia">Usia > 60 tahun</string>
    <string name="usia_dewasa">Usia 10 – 60 tahun</string>
    <string name="usia_anak">Usia &lt; 10 tahun </string>
    <string name="tv_infotambahan_detail">* Infokan apabila ada ibu hamil/penyandang disabilitas/orang dengan penyakit tertentu</string>
    <string name="status_1">Lokasi telah dikirimkan</string>
    <string name="status_2">Lokasi telah diterima</string>
    <string name="status_3">Bantuan sedang dalam perjalanan</string>
    <string name="button_batalkan">Batalkan</string>
    <string name="button_kirimpesan">Kirim Pesan</string>
    <string name="alert_batalkan_status1">Bantuan Anda akan segera ditangani, apakah Anda yakin ingin membatalkan?</string>
    <string name="alert_batalkan_status2">Bantuan Anda sudah ditangani oleh tim penolong, apakah Anda yakin ingin membatalkan?</string>
    <string name="alert_batalkan_status3">Bantuan Anda sudah dalam perjalanan, apakah Anda yakin ingin membatalkan?</string>
    <string name="alert_batalkan">Batalkan Permintaan Bantuan</string>
    <string name="alert_jangan_batalkan">Jangan Batalkan</string>
    <string name="alert_tetap_batalkan">Tetap Batalkan</string>
    <string name="bantuan_selesai">Bantuan selesai</string>
    <string name="rincian_bantuan">Rincian</string>
    <string name="rincian_rescuer">Dibantu oleh</string>
    <string name="jenis_bantuan">Jenis Bantuan : </string>
    <string name="button_victim_data">Data Korban</string>
    <string name="button_i_want_to_help">Saya Ingin Membantu</string>
    <string name="lat_long"><![CDATA[%s, %s]]></string>
    <string name="distance">%s dari lokasi Anda</string>
    <string name="detail_victim"><![CDATA[<br><b>%s</b><br><br>%s<br><br><b>Jumlah Orang:</b><br>%s lansia<br>%s dewasa<br>%s anak<br><br><b>Info Tambahan:</b><br>%s]]></string>
    <string name="victim_number">Jumlah Orang:</string>
    <string name="additional_info">Informasi Tambahan:</string>
    <string name="number_of_elderly"><![CDATA[<b>%s</b> Lansia]]></string>
    <string name="number_of_adults"><![CDATA[<b>%s</b> Dewasa]]></string>
    <string name="number_of_children"><![CDATA[<b>%s</b> Anak-anak]]></string>
    <string name="open_maps">Buka Peta</string>
    <string name="send_chat">Kirim Pesan</string>
    <string name="on_the_way_to_victim">Saya Menuju Korban</string>
    <string name="finish_help_victim">Selesai</string>
    <string name="thank_you"><b>TERIMA KASIH TELAH MEMBANTU</b></string>
    <string name="go_to_temukan_saya">Kembali ke Peta Korban</string>
    <string name="call_rescuer"><u>Hubungi</u></string>
    <string name="direction">Dapatkan petunjuk</string>
    <string name="help_otw">Bantuan dalam perjalanan</string>
    <string name="help_accepted">Permintaan bantuan diterima</string>
    <string name="choose_photo_edit">Ubah Foto Profil</string>
    <string name="edit_photo_edit">Pilih Foto</string>
    <string name="change_photo">Ganti</string>
    <string name="name_edit_profile">Nama Lengkap</string>
    <string name="phone_profile">No. HP</string>
    <string name="instansi_profile">Instansi</string>
    <string name="division_profile">Divisi</string>
    <string name="employeeid_profile">No. ID Karyawan</string>
    <string name="email_profile">Email</string>
    <string name="password_profile">Ubah Kata Sandi</string>
    <string name="edit_profile_save">Simpan</string>
    <string name="max_char_50">%d/50</string>
    <string name="max_char_280">%d/280</string>
    <string name="petunjuk"><u>Dapatkan Petunjuk</u></string>
    <string name="kapasitas">Kapasitas: </string>
    <string name="fasilitas">Fasilitas: </string>
    <string name="information">Informasi Tambahan: </string>
    <string name="koordinator_posko">Koordinator Posko : </string>
    <string name="koordinator_posko_number">Kontak : </string>
    <string name="number_of_kk"><![CDATA[<b>%s</b> KK]]></string>
    <string name="crated_at">Dibuat pada %s</string>
    <string name="capacity">Kapasitas: </string>
    <string name="close_posko">Tutup Posko</string>
    <string name="close_posko_warning">Apakah Anda yakin ingin menutup posko? Posko yang sudah ditutup tidak bisa dikembalikan</string>
    <string name="close_posko_positive">Tutup Posko</string>
    <string name="close_posko_negative">Batalkan</string>
    <string name="rescuer_detail"><![CDATA[Posko ini ditambahkan oleh %s dari %s %s <br> Kontak : %s]]></string>
    <string name="edit_posko"><u>Ubah</u></string>
    <string name="title_recycler_view">POSKO TERDEKAT</string>
    <string name="add_posko"><u>Tambahkan</u></string>
    <string name="add_posko_name">Nama Posko</string>
    <string name="add_posko_name_detail">Sertakan nama lokasi seperti nama Sekolah atau Masjid atau sebutan tempat yang dapat mudah dikenali</string>
    <string name="add_posko_city">Kota Administratif</string>
    <string name="add_posko_district">Kecamatan</string>
    <string name="add_posko_sub_district">Kelurahan</string>
    <string name="add_posko_address_generate">Alamat</string>
    <string name="add_posko_address_notes">Keterangan Alamat Tambahan (bila ada)</string>
    <string name="add_posko_address_notes_2">Keterangan Alamat Tambahan</string>
    <string name="add_posko_capacity">Kapasitas Kepala Keluarga</string>
    <string name="add_posko_facility">Fasilitas</string>
    <string name="add_posko_radio_button_bed">Tempat Tidur</string>
    <string name="add_posko_radio_button_medic">Medis</string>
    <string name="add_posko_radio_button_logistic">Logistik (Makanan dan Baju Bersih)</string>
    <string name="add_posko_radio_button_kitchen">Dapur Umum</string>
    <string name="add_posko_radio_button_wc">WC Umum</string>
    <string name="add_posko_additional_info">Keterangan Tambahan</string>
    <string name="add_posko_contact_name">Nama Koordinator Posko</string>
    <string name="add_posko_contact_number">Nomor Telepon Koordinator Posko</string>
    <string name="add_posko_locate_me">Gunakan Lokasi</string>
    <string name="add_posko_make_posko">Buat Posko</string>
    <string name="edit_posko_make_posko">Simpan</string>
    <string name="add_posko_button_location">Gunakan Lokasi</string>
    <string name="phone_code">+62</string>
    <string name="button_send">Kirim</string>
    <string name="enter_message">Tulis pesan</string>
    <string name="confirm_logout">Apakah Anda yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>