<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_light"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/imageview_foto_placer"
            android:layout_width="97dp"
            android:layout_height="97dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_empty_pict" />

        <Button
            android:id="@+id/button_edit_photo"
            style="@style/OutlinedBorder"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/choose_photo_edit" />

        <Button
            android:id="@+id/button_change_photo"
            style="@style/OutlinedBorder"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/change_photo"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_choose_photo"
            style="@style/OutlinedBorder"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/edit_photo_edit"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/name_edit_profile"
            android:textColor="@color/black_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_edit_name_korban"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_border_edittext"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/phone_profile"
            android:textColor="@color/black_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edittext_edit_phone_korban"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:background="@drawable/shape_border_edittext"
            android:fontFamily="@font/source_sans_pro"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/button_save_profile"
            style="@style/BlackButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile_save" />
    </LinearLayout>
</ScrollView>