<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_light">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_light"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_name"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_name_detail"
                android:textColor="@color/grey_dark"
                android:textSize="13sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edittext_edit_posko_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_border_edittext"
                android:fontFamily="@font/source_sans_pro"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="SDN 05 Pagi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_address_generate"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edittext_edit_posko_address_generate"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_border_edittext"
                android:enabled="false"
                android:fontFamily="@font/source_sans_pro"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:padding="10dp"
                android:textColor="@color/grey_dark"
                tools:text="Jl. Gandaria Utara No 30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_address_notes"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_edit_posko_address_notes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_border_edittext"
                android:fontFamily="@font/source_sans_pro"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:padding="10dp"
                tools:text="Jl. Gandaria Utara No 30 Dekat yang jual ayam boraks" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_capacity"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_edit_posko_capacity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_border_edittext"
                android:fontFamily="@font/source_sans_pro"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="56" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_facility"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_medic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_radio_button_medic"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_bed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_radio_button_bed"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_kitchen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_radio_button_kitchen"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_logistic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_radio_button_logistic"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox_wc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_radio_button_wc"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_additional_info"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_edit_posko_additional_info"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_border_edittext"
                android:fontFamily="@font/source_sans_pro"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:padding="10dp"
                tools:text="tersedia makanan untuk bayi " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_contact_name"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edittext_edit_posko_contact_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_border_edittext"
                android:fontFamily="@font/source_sans_pro"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                tools:text="Budi Suhartono" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/add_posko_contact_number"
                android:textColor="@color/black_dark"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/textview_phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/phone_code"
                    android:textColor="@color/black_dark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    android:enabled="false"
                    android:paddingVertical="5dp"
                    android:fontFamily="@font/source_sans_pro"
                    android:background="@drawable/shape_border_edittext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="@id/edittext_edit_posko_contact_number"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/edittext_edit_posko_contact_number"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_border_edittext"
                    android:fontFamily="@font/source_sans_pro"
                    android:inputType="phone"
                    android:layout_marginStart="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintTop_toTopOf="@id/textview_phone_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textview_phone_code"
                    tools:text="81234567890" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_edit_posko_finish"
                style="@style/BlackButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:text="@string/edit_posko_make_posko" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar_add_posko"
            style="@style/ProgressBarTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>

</ScrollView>