<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_light"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="70dp"
    android:paddingEnd="30dp"
    android:paddingBottom="40dp">


    <EditText
        android:id="@+id/edittext_signin_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_border_edittext"
        android:fontFamily="@font/source_sans_pro"
        android:hint="@string/signup_email_rescuer"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        tools:text="andi@xyz.com" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edittext_signin_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_border_edittext"
            android:fontFamily="@font/source_sans_pro"
            android:hint="@string/signup_password_rescuer"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1234567" />

        <ImageView
            android:id="@+id/button_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_password_show"
            app:layout_constraintBottom_toBottomOf="@id/edittext_signin_password"
            app:layout_constraintEnd_toEndOf="@id/edittext_signin_password"
            app:layout_constraintTop_toTopOf="@id/edittext_signin_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/button_signin_finish"
        style="@style/BlackButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:text="@string/button_signin" />

    <TextView
        android:id="@+id/button_signin_tosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/button_tosignup"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressbar_signin"
        style="@style/ProgressBarTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
